add cors origin config on all controllers

--- a/com.carvajal.ecommerce.wishlist/com.carvajal.ecommerce.wishlist.controller/src/main/resources/application.properties
+++ b/com.carvajal.ecommerce.wishlist/com.carvajal.ecommerce.wishlist.controller/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=EcommerceWishList
 
 cross.origin=http://localhost:4200
 
+ecommerce.allowedOriginsApps=http://127.0.0.1:4200;http://localhost:4200;http://localhost:4201;http://localhost:8082;http://localhost:8080
+
 #conexion a los motores de bd
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommercedb
